--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.7",
-    "astro": "^5.3.0",
-    "lenis": "^1.1.22",
+    "@tailwindcss/vite": "^4.0.9",
+    "astro": "^5.4.2",
+    "gsap": "^3.12.7",
+    "lenis": "^1.2.1",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
-    "tailwindcss": "^4.0.7"
+    "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16"
