--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.2.3",
     "@tailwindcss/vite": "^4.0.11",
     "astro": "^5.5.2",
     "lenis": "^1.2.1",
