--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lenis": "^1.2.1",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
+    "resend": "^4.1.2",
     "tailwindcss": "^4.0.11"
   },
   "devDependencies": {
