--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/netlify": "^6.2.3",
     "@tailwindcss/vite": "^4.0.11",
     "astro": "^5.5.2",
+    "gsap": "^3.12.7",
     "lenis": "^1.2.1",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
