feat(team): Implement dynamic team member cards
- Update nosotros.astro to use getCollection for fetching authors
- Modify MemberTeamTypedCard to dynamically render team member information
- Add Image component to display team member avatars
- Improve team section layout and styling
- Add new author YAML files for team members

- Pending to do changes to generate static endpoints to the authors

--- a/src/content/author/diana-guerrero.yml
+++ b/src/content/author/diana-guerrero.yml
@@ -1,5 +1,5 @@
 name: Diana Guerrero
 avatar: ./avatars/diana.png
 instagram: https://www.instagram.com/dianaguerrero_to/
-bio:   Apasionada por Dios, terapeuta ocupacional pediátrica con mas de 10 años de experiencia en la aplicacion de esttudios de integracioin sensorial y formacion en terapia alimentaria.
+bio: Apasionada por Dios, terapeuta ocupacional pediátrica con más de 10 años de experiencia en la aplicación de estudios de integración sensorial y formación en terapia alimentaria. Graduada con honores de la Universidad Nacional de Colombia, he complementado mi formación con especializaciones en España y Estados Unidos en técnicas avanzadas de integración sensorial. He trabajado en prestigiosos centros clínicos pediátricos y he desarrollado programas personalizados para niños con diversos desafíos del desarrollo. Mi enfoque holístico incorpora a la familia como pieza fundamental del proceso terapéutico, ofreciendo también talleres para padres y educadores. Actualmente dirijo mi propio centro terapeutico especializado en trastornos sensoriales y alimentarios infantiles donde he creando un entorno seguro donde cada niño puede desarrollar todo su potencial.
 subtitle: 'Especialista En Salud Ocupacional Pediátrica'
